Afeez/single partner (#35)
* fix: added type to sum function in testing

* :feat: get single partner

* :feat: get single partner

* :feat: get single partner

* :feat: get single partner

* :feat: get single partner
